FIX: prevent invite link from wrapping to two lines

--- a/src/components/ResultView.module.scss
+++ b/src/components/ResultView.module.scss
@@ -199,6 +199,7 @@
   border: none;
   color: $color-white;
   font-size: 14px;
+  white-space: nowrap;
   font-weight: 500;
   display: flex;
   align-items: center;
